--- a/WeekWorldPlanetJam/Career/ScienceDefinitions/c_Wolf-Rayet_ScienceDefs/ScienceDefinitions.cfg
+++ b/WeekWorldPlanetJam/Career/ScienceDefinitions/c_Wolf-Rayet_ScienceDefs/ScienceDefinitions.cfg
@@ -313,6 +313,33 @@
 		ReticulumInSpaceLow = You can't help but jolt every time you hear a knock on the walls of the craft, your ears are a better micrometeorite detector than any instrument they could've packed on this mission as you complain to the folks back home.
 		ReticulumSrfLanded = On the bright side, the temperature here isn't much worse than what you're used to back home. On the down side, the temperature here isn't much better what you're used to back home.
 		ReticulumSrfSplashed = You're really hoping they don't tell you to swim in these waters, even in here it's starting to feel like a vegetable steamer.
+		ReticulumSrfLandedPoles = You feel the ground below the craft buckle slightly. Hopefully it won't do that anymore than it already has.
+		ReticulumSrfLandedPeaks =  Through tremendous efforts of engineering, planning, and execution the you find yourself in the most hospitable regions of Reticulum's surface. While it is still decidedly a hellscape with no breathable air, this is a slightly cooler less pressurized hellscape, which in the long run you will grow to appreciate.
+
+		GolgiInSpace = A refreshing and lively lavender light seeps through the windows of the craft, but you remember the world below couldn't be more different from home.
+		GolgiSrfLanded = You reflect briefly on far-gone history. You wonder what it must've been like to have two worlds like this right on the cosmic doorstep for those who lived on Kerbin many ages ago. You can only conclude one thing; must've been a lot different than this.
+		GolgiSrfLandedHighland = These raised regions have signifcantly harder to navigate terrain than the rest of Golgi's globe.
+		GolgiSrfLandedNorthRegion = Nice and flat, easy to land on, easy to drive across. Aside from the occasional tremor, it'll be easy going here you think.
+		GolgiSrfLandedSouthRegion = This regions is fairly uninteresting to navigate, but is also poorly understood. Scientists back home really want to figure out what this region has in store.
+		GolgiSrfLandedCrater = What a wonderful little oasis of stable terrain you've found.
+
+		LysoInSpace = You have a bad feeling about this, before you left on this mission you were told about the extent that can be reached by Lyso's volcanic plumes, even if they're quite rare.
+		LysoSrfLanded = And you may find yourself landed on a sulfur sphere. And you may find yourself in another part of the system. And you may find yourself behind the controls of a large space-vehicle. And you may find yourself on a beautiful moon, with beautiful rings above. And you may ask yourself, "Well, how did I get here?"
+		LysoSrfLandedActive = Watching the moons go by, let gravity hold me down. Watching the moons go by, magma's flowing underground.
+		LysoSrfLandedDEAD = Into the world again, after the heat is gone. Once in its lifetime, magma once flowed underground.
+		LysoSrfLandedLowland = And you may ask yourself, "How'd Lyso work this?" And you may ask yourself, "What is this large space-vehicle?"
+
+		CytoselInSpace = The light that shines through the window has a sickly green tinge. What an alien world you've stumbled on.
+		CytoselSrfLanded = Your craft kicks up a considerable amount of dust, you take a moment to watch it slowly flutter to the ground in silent awe.
+		
+		RiboInSpace = Looking at Ribo from the window, you're astonished both by how large it is, and how large it isn't.
+		RiboSrfLanded = You've landed? It doesn't feel like you've landed. You go to the window and check- what'd'ya know! You've landed! You have landed on Ribo. You feel like you won't get much enrichment out of the gravity here.
+		
+		YroptosInSpace = The asteroids before you host tremendous scientific interest, from their nature as a double system, to their place as the largest system on the opposite side of Reticulum.
+		YroptosSrfLanded = Nice landing, if every operation here goes as smoothly as that you'll complete this mission with flying colors.
+	
+		ExularInSpace = It's the tiny lil one. The lil itty bitty one. The teeny weeny itsi bitsi little widdle smiddle tiny lil- you find yourself cut short by mission control asking you kindly to stop. Perhaps you should save it for the cold mic.
+		ExularSrfLanded = You're worried if you sneeze too hard the craft won't be on the surface. Luckily one thing you can practically guarantee is that no allergens exist on Exular... unless you count dust. There's probably a fair bit of that. Good luck.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[surfaceSample]]:FOR[WWPJ]
@@ -389,7 +416,32 @@
 				InSpaceHigh = The distant globe of Asite Par is strikingly beautiful, the blue oceans and purple moss carpets rubbing up against the brown mud and red sands, all just barely visible through the dust and windows in the clouds. You can't imagine a better world to call home, even if Asite Par is nothing like the ancestral home of Kerbalkind.
 			}
 		}
-		
+
+		ReticulumInSpaceHigh = Gazing around you is a wonderful feeling. It's like you're flying along side the moons and parent planet as they orbit Sauwel. Suddenly it hits you, it's not *like* you're doing that, you *are* doing that. It's a warm feeling.
+		ReticulumInSpaceLow = This region of the system has a higher than average micrometeorite risk, you're not sure if you want to stay outside for long. There's a small "tap" against your visor. No crack, but you're starting to pick up the pace of the EVA operation.
+		ReticulumSrfLanded = Walking among the dramatic mountains sides and valley floors of this world is a surreal experience, far removed from the dusty plains of home. Not to mention the sky is full with items of interest, the moons and rings watch you work from above.
+		ReticulumSrfLandedPeaks = This might be one of the best views the Reticulum System has to offer.
+		ReticulumSrfLandedPoles = As you look out over the distant horizon, you take note that all of the intrigue held by the Reticulum System visually, its moons and rings, aren't visible at all here. It's a strange feeling.
+		ReticulumSrfSplashed = High gravity, high atmospheric pressure, and scaulding hot water makes this a rather uncomfortable experience, as swimming requires great effort... maybe you should bring a boat, or at least a pool tube next time.
+
+		RiboInSpace = You feel like you could reach out and touch Ribo, and while the distance your arms would have to cross makes that impossible, the fuel in an RCS pack alone would be enough to close the gap.
+		RiboSrfLanded = You have to watch your step, you fear on this tiny world you might be able to trip and fall upwards.
+
+		GolgiInSpace = The surface below is jagged and chaotic in some places, and comparatively smooth in others. It reminds you of something, but you can't put your finger on it.
+		GolgiSrfLanded = You take note that Golgi doesn't have as much dust as you anticipated. The surface is pretty solid.
+		GolgiSrfLandedHighland = Your boots seem to cause some flaking on the surface, small and thin sheet-like units of material are broken off the otherwise smooth ground by your footfalls. Interesting.
 		GolgiSrfLandedCrater = You find yourself wondering if these craters were failed attempts at coorbital companions, and if perhaps someday Ribo will make its own scar on Golgi's surface. You then consider that Reticulum and Asite Par have the same relationship as Golgi and Ribo, and find your stomach ties itself into a knot. Best not to dwell on that.
+
+		CytoselInSpace = You almost feel like you're intruding on Cytosel, who finds itself the center of its own little kingdom of gravity on the coastline of the Reticulum System, a few steps away from the interplanetary ocean. Cytosel doesn't seem to mind your visit however.
+		CytoselSrfLandedNear = You try to lean back to get a look at Reticulum hanging above, but this suit makes that difficult. You decide you're okay looking at the rugged rim of the crater bowl.
+		CytoselSrfLandedLow = Cytosel's surface is very dusty, and you find that bright equipment can be difficult to find after you set it down.
+		CytoselSrfLandedHigh = The dark ground makes it very easy to identify pieces of equipment, but also brings out the stains of dark dust quickly caking everything as you work.
+		CytoselSrfLandedFar = As you walk across the surface of a new world, you begin to make quite a fuss about a small mound you see. You take several images of it, compare it to a volcano while emphasizing it isn't a volcano. Despite this mission control asks you to confirm it isn't a tiny volcano. How magnificent.
+
+		YroptosInSpace = Hanging out with the 'roids is quite relaxing. You feel carefree as you slowly drift through space with them in the low gravity environment.
+		YroptosSrfLanded = You touch down gently on the surface of the parent asteroid, its rubbly lumpy surface stretches as far as the eye can see... which come to think of it isn't actually that far.
+
+		ExularInSpace = You might as well have already landed, the velocity is very low here in orbit. You're more accurately parked along side Exular rather than truly orbiting it. You take note of the strange... lump on its south pole, its as though something is jutting out.
+		ExularSrfLanded = It might be possible to walk into orbit here, you're tempted to try it. Mission control urges you: do not try it.
 	}
 }	
