--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Scatterer/OceanR.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Scatterer/OceanR.cfg
@@ -3,35 +3,31 @@
 	Ocean
 	{
 		name = Reticulum
-		m_foamAnsio = 0
-		m_foamMipMapBias = -2
-		m_whiteCapStr = 0.65
-		shoreFoam = 1.2
-		m_farWhiteCapStr = -0.1
-		AMP = 1.1
-		m_ansio = 2
-		m_windSpeed = 13
+		AMP = 1.20000005
+		m_windSpeed = 7
 		m_omega = 0.839999974
-		m_varianceSize = 4
-		m_oceanUpwellingColor = 0.033,0.067,0.071
-		m_UnderwaterColor = 0.33,0.67,0.71
-		m_resolution = 4
-		MAX_VERTS = 65000
-		oceanScale = 1
-		oceanAlpha = 0
-		alphaRadius = 1600
-		transparencyDepth = 90
-		darknessDepth = 1040
-		refractionIndex = 1.345
+		m_gravity = 9.81000042
+		maxWaveInteractionShipAltitude = 500
+		m_whiteCapStr = 0.469999999
+		shoreFoam = 1
+		m_farWhiteCapStr = 0.469999999
+		m_oceanUpwellingColor = 0.00800000038,0.0599999987,0.064000003
+		m_UnderwaterColor = 0.100000001,0.75,0.800000012
+		offScreenVertexStretch = 1.25
+		alphaRadius = 1000
+		transparencyDepth = 100
+		darknessDepth = 800
+		refractionIndex = 1.33000004
+		skyReflectionStrength = 1
 		causticsTexturePath = scatterer/config/Planets/Caustics.png
 		causticsLayer1Scale = 0.200000003,0.200000003
 		causticsLayer1Speed = 0.0612000003,-0.151199996
 		causticsLayer2Scale = 0.277099997,0.267100006
 		causticsLayer2Speed = -0.0748699978,0.174869999
 		causticsMultiply = 1
-		causticsUnderwaterLightBoost = 1.6
-		causticsMinBrightness = 0.4
-		causticsBlurDepth = 160
-		gravity = 16.86
+		causticsUnderwaterLightBoost = 2
+		causticsMinBrightness = 0.5
+		causticsBlurDepth = 200
+		lightRaysStrength = 1
 	}
 }
