--- a/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
@@ -17,22 +17,92 @@
 		Properties
 		{
 			displayName = Windswept^N
+			description = Windswept is a remarkable showcase of a planetary-scale mishap. Calculations suggest that habitable planets are extremely rare when they get more luminosity than Windswept or if they get much less luminosity than Windswept. Yet life appears common in the planets orbiting below Windswept, while Windswept is comparatively dead. What went wrong here? \n\n Observation of Windswept has been impossible for the past 100 or so years, as Windswept has plunged into a long-term global dust storm with no hint of it stopping any time soon. We're relying on outdated, low resolution hand-drawn maps from the days before the invention of photography. \n -Adstri
 			radius = 694200
+			//density = 0.9009 * kEarth
+			//geeASL = 0.9817 G
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
 			@mass *= 1.1655
-			description = -Adstri \n [ed note: description pending. detailed surface maps pending, too.]
+			//description = -Adstri \n [ed note: description pending. detailed surface maps pending, too.]
 			ScienceValues
             {
 
             }
+			biomeMap = WWPJ/KopernicusFiles/3_Sauwel_d/PluginData/Windswept_Biomes.png
+			Biomes
+			{
+				Biome
+				{
+					name = ULowlands
+					displayName = Uncharted Lowlands
+					color = RGBA(95,95,95,255)
+					value = 1
+				}
+				Biome
+				{
+					name = UMidlands
+					displayName = Uncharted Lands
+					color = RGBA(144,144,144,255)
+					value = 1
+				}
+				Biome
+				{
+					name = UHighlands
+					displayName = Uncharted Highlands
+					color = RGBA(193,193,193,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Poles
+					displayName = Dusty Poles
+					color = RGBA(255,235,250,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Lowlands
+					displayName = Lowlands
+					color = RGBA(144,86,54,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Midlands
+					displayName = Midlands
+					color = RGBA(178,131,83,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Highlands
+					displayName = Highlands
+					color = RGBA(212,176,111,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Plateau
+					displayName = Great Plateau
+					color = RGBA(247,210,83,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Walls
+					displayName = Strange Walls
+					color = RGBA(0,20,234,255)
+					value = 1
+				}
+			}
 		}
 		Orbit
 		{
 			referenceBody = WWPJ/Sauwel
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU ARE ALLOWED TO CHANGE:
-			color = 0.7,0.41,0.4,1
+			color = RGBA(191,129,75,255)
 			
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
@@ -47,6 +117,34 @@
 			argumentOfPeriapsis = 0
 			meanAnomalyAtEpoch = 4.79
 			inclination = 0.11
+		}
+		Atmosphere
+		{
+			atmosphereDepth = 36000
+			staticPressureASL = 6
+			adiabaticIndex =	1.30
+			atmosphereMolarMass =	0.04401
+			pressureCurveIsNormalized = True //thanks to Cloverdove, I now know that this is possible. -Luna
+			pressureCurve
+			{
+				key = 0 1
+				key = 0.1 0.733
+				key = 0.2 0.524
+				key = 0.3 0.363
+				key = 0.4 0.241
+				key = 0.5 0.151
+				key = 0.6 0.0878
+				key = 0.7 0.0446
+				key = 0.8 0.0179
+				key = 0.9 0.0040
+				key = 0.91 0.00326
+				key = 0.93 0.00193
+				key = 0.95 0.000967
+				key = 0.97 0.000341
+				key = 0.99 0.0000372
+				key = 0.995 0.000009243
+				key = 1 0
+			}
 		}
 		ScaledVersion
 		{
