--- a/WeekWorldPlanetJam/SETTINGS.cfg
+++ b/WeekWorldPlanetJam/SETTINGS.cfg
@@ -13,4 +13,10 @@ WWPJ_Settings
 	//Planned additional settings:
 	//Kronometer compatibility
 	//Sun color correction mode (pale yellow default vs "orange" dwarf)
+	
+	ScaledspaceClouds = True
+	
+	//Options are True or False. (Case sensitive.)
+	//True: Use a global dust storm map on Windswept
+	//False: Use Windswept's unfinished pqs colormap as a scaledspace map.
 }
