Paler clouds for Windswept.

--- a/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
@@ -24,12 +24,14 @@
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
 			@mass *= 1.1655
+			rotationPeriod = 25200
+			//7 hours or 420 minutes.
 			//description = -Adstri \n [ed note: description pending. detailed surface maps pending, too.]
 			ScienceValues
             {
 
             }
-			biomeMap = WWPJ/KopernicusFiles/3_Sauwel_d/PluginData/Windswept_Biomes.png
+			biomeMap = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/Windswept_Biomes.png
 			Biomes
 			{
 				Biome
@@ -102,7 +104,7 @@
 			referenceBody = WWPJ/Sauwel
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU ARE ALLOWED TO CHANGE:
-			color = RGBA(191,129,75,255)
+			color = RGBA(202,155,116,255)
 			
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
