--- a/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/ScaledClouds.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/ScaledClouds.cfg
@@ -21,6 +21,14 @@
 				%normals = BUILTIN/cloud_normal
 				%rimPower = 2.48
 				%rimBlend = 0.29
+				!Gradient{}
+				Gradient
+				{
+					0.0 = 0.45, 0.55, 0.7, 1.0
+					0.1 = 0,0,0,1
+					0.6 = 0.0,0.0,0.0,1.0
+					1.0 = 0.0,0.0,0.0,1.0
+				}
 			}
 		}
 	}
