remove soi from caen moons

--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/1_Sauwel_e_1_Ovoidun.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/1_Sauwel_e_1_Ovoidun.cfg
@@ -21,7 +21,7 @@
 			radius = 73488.2
 			// 1/100 earth mass in kilograms
 			mass = 7.35e+19
-			sphereOfInfluence = 197774
+			//sphereOfInfluence = 197774 this should not have been specified. -Luna
 			tidallyLocked = true
 			initialRotation = 93
 			description = A small mildly egg shaped moon orbiting close in to Caen. it was discovered after one of our astronomers saw a big egg orbiting Caen, he was later relived from astronomy after it was discovered he was blind. The culprit? Staring at the Sun too long. \n -Techo
