--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
@@ -21,7 +21,7 @@
 			radius = 94553
 			// 1/100 earth mass in kilograms
 			mass = 1.47e+20 
-			sphereOfInfluence = 194774
+			//sphereOfInfluence = 194774 this is really small and should not have been added -Luna 
 			tidallyLocked = true
 			description = A small round moon orbiting far out from Caen. This moons name is, infact a common misspelling of the Kerbal god of moons, we aren't exactly sure what the correct spelling is however. \n -Techo
 			ScienceValues
