Atmosphere Visual Tweaks
* Remove the scatterer compatibility patch from the AP Homeworld config file, as it was causing too much trouble. Scatterer is only partially supported for now, though I'd like to try to re-do the AP Homeworld scatterer support and see if I can do it in a way that doesn't cause problems.
* Add Techo's art pass on Ovoidun. Caen art pass coming soon.
* Change atmosphere-from-ground on Asite Par to match scatterer appearance; and on Askilos since it had been Jool-Template-Green.
* Change the stockalike scaledspace atmosphere rims to be more consistent with each other and with their scatterer appearances.
* Remove Windswept's Strange Walls biome--the texture which included it never actually got saved, and i decided not to remake it again.
* Tweak Windswept's texture again to make the finished part of the planet show through a little better so you can tell where to land.
* Gave Avu the ringed planet icon Exo made for Reticulum.

--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/AsitePar.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/AsitePar.cfg
@@ -106,7 +106,7 @@
                 		shininess = 0.375
 				specColor = 0.3731,0.4077,0.4269,0
 				gloss = 0.2
-				rimPower = 2
+				rimPower = 0.6
 				rimBlend = 1
 				rimColorRamp = WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/PluginData/Blue.png
 				rimColorRampScale = 1,1
@@ -478,6 +478,10 @@
 			atmosphereMolarMass =	0.02907
 			temperatureSeaLevel =	307
 			staticPressureASL =	70.9275		
+			atmosphereFromGround
+			{
+				waveLength = 0.55,0.53,0.5,1
+			}
 			temperatureCurve				
 			{				
 key =	0	299	0.00000E+00	-5.13834E-03
