--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/1_Sauwel_e_1_Ovoidun.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/1_Sauwel_e_1_Ovoidun.cfg
@@ -21,7 +21,7 @@
 			radius = 73488.2
 			// 1/100 earth mass in kilograms
 			mass = 7.35e+19
-			//sphereOfInfluence = 197774 this should not have been specified. -Luna
+			sphereOfInfluence = 197774
 			tidallyLocked = true
 			initialRotation = 93
 			description = A small mildly egg shaped moon orbiting close in to Caen. it was discovered after one of our astronomers saw a big egg orbiting Caen, he was later relived from astronomy after it was discovered he was blind. The culprit? Staring at the Sun too long. \n -Techo
@@ -112,7 +112,7 @@
 
 			Material
 			{
-			texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Sauwel e1_3_Color.png
+			texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Ovoidun_ScaledspaceColor.png
 			normals = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Ovoidun_Normal.png
 			color = 1,1,1,1
 			specColor = 0,0,0,0
@@ -130,13 +130,13 @@
 				{
 					order = 5
 					enabled = true
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Sauwel e1_3_Color.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Ovoidun_PQS_Color.png
 
 				}
 
 				VertexHeightMap
 				{
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Sauwel e1_3_Height.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Ovoidun_Height.png
 					offset = 0
 					deformity = 4000.0
 					scaleDeformityByRadius = false
