--- a/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Avu.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Avu.cfg
@@ -33,6 +33,7 @@
 			referenceBody = WWPJ/Sauwel
 			
 			color = 0.5,0.5,0.5,1
+			iconTexture = WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Textures/Ringed_Icon.png
 			
 			//multiple asteroidal or dwarf planet objects are allowed in this orbital class, if you like.
 			//orbits should be on a 2:3 or similar orbital resonance with the giant planet (planet g.)
@@ -116,7 +117,7 @@
 				specColor = 0,0,0,1
 				texture = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Avu_Color.png
 				normals = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Avu_Normal.png
-				rimPower = 0.4
+				rimPower = 1
 				rimBlend = 0.3
 				Gradient
 				{
