--- a/WeekWorldPlanetJam/SETTINGS.cfg
+++ b/WeekWorldPlanetJam/SETTINGS.cfg
@@ -10,13 +10,14 @@ WWPJ_Settings
 	//When set to Kerbin, an unmodified stock Kerbin will be placed into a 0.292 au orbit around Sauwel.
 	//Kerbin is essentially a debug option--it is not intended to be played from. Its orbit will also be super close to Windswept.
 	
-	//Planned additional settings:
-	//Kronometer compatibility
-	//Sun color correction mode (pale yellow default vs "orange" dwarf)
-	
 	ScaledspaceClouds = True
 	
 	//Options are True or False. (Case sensitive.)
 	//True: Use a global dust storm map on Windswept
 	//False: Use Windswept's unfinished pqs colormap as a scaledspace map.
+	
+	//Planned additional settings:
+	//Kronometer compatibility
+	//Sun color correction mode (pale yellow default vs "orange" dwarf)
+	//Sun intensity curve setting (continuous light versus dimmer light with distance)
 }
