--- a/WeekWorldPlanetJam/KopernicusFiles/1_Sauwel_b/0_Sauwel_b_i.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/1_Sauwel_b/0_Sauwel_b_i.cfg
@@ -79,6 +79,10 @@
 			atmosphereMolarMass = 0.04406				
 			temperatureSeaLevel = 1097				
 			staticPressureASL =	10132.5		
+			AtmosphereFromGround
+			{
+				waveLength = 0.76,0.59,0.56,1
+			}
 			pressureCurve					
 			{					
 				key =	0	1.01325E+04	0.00000E+00	-4.98136E-01
