new menea biome map
thanks Techo

--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
@@ -35,54 +35,60 @@
 				spaceAltitudeThreshold = 140000 // Alt
 
           		  }
+			biomeMap = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\emoon 2 biome2.png
 
-			biomeMap = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\emoon 2 Biome.png
+                Biomes
+                {
+                    Biome
+                    {
+                           name = MajorCraters
+						   displayName = Major Craters
+                           value = 1.9
+                           color = RGBA(222,255,3,255)
+                    }
 
-				Biomes
-				{
-  					Biome
-  					{
-  					 	name = Major Craters
-						value = 1.9
- 					 	color = RGBA(0,0,0,255)
- 				        }
-  					Biome
-  					{
-    						name = Minor Craters
-    						value = 0.9
-    						color = RGBA(1.0,255,0.0,255)
-  					}
-					Biome
-  					{
-    						name = Highlands
-    						value = 0.9
-    						color = RGBA(9,0,255,255)
-  					}
-					Biome
-  					{
-    						name = Lowlands
-    						value = 0.9
-    						color = RGBA(255,172,0,255)
-  					}
-					Biome
-  					{
-    						name = South Pole Craters
-    						value = 0.9
-    						color = RGBA(0,255,247,255)
-  					}
-					Biome
-  					{
-    						name = South Pole
-    						value = 1.2
-    						color = RGBA(0,17,255,255)
-  					}
-					Biome
-  					{
-    						name = North Pole Flats
-    						value = 0.9
-    						color = RGBA(123,0,255,255)
-  					}
+                    Biome
+                    {
+                            name = MinorCraters
+							displayName = Minor Craters
+                            value = 0.9
+                            color = RGBA(3,255,137,255)
+                    }
 
+                    Biome
+                    {
+                            name = Lowlands
+                            value = 0.9
+                            color = RGBA(3,209,255,255)
+                    }
+
+                    Biome
+                    {
+                            name = Maria
+                            value = 0.9
+                            color = RGBA(137,255,0,255)
+                    }
+
+                    Biome
+                    {
+                            name = Highlands
+                            value = 0.9
+                            color = RGBA(125,3,255,255)
+                    }
+                      
+                    Biome
+                    {
+                            name = South Pole
+                            value = 1.2
+                            color = RGBA(3,33,255,255)
+                    }
+
+                    Biome
+                    {
+                            name = North Pole Flats
+                            value = 0.9
+                            color = RGBA(255,3,241,255)
+                    }
 				}
 
 		}
